Implemented scale and translation of objects
-Fixed virtualScene not displaying more than one object
-Bug?: Scale increases Y of the mapped object.
-Bug?: Translate affects the Y of the mapped object even when the
translation y is set to 0.

--- a/resources.qrc
+++ b/resources.qrc
@@ -7,5 +7,6 @@
         <file>resources/configMappingData.txt</file>
         <file>resources/data0.txt</file>
         <file>resources/data10.txt</file>
+        <file>resources/models/f16.obj</file>
     </qresource>
 </RCC>
