--- a/resources.qrc
+++ b/resources.qrc
@@ -8,5 +8,9 @@
         <file>resources/data0.txt</file>
         <file>resources/data10.txt</file>
         <file>resources/models/f16.obj</file>
+        <file>resources/models/sphere0.obj</file>
+        <file>resources/models/capsule.obj</file>
+        <file>resources/models/suzanne.obj</file>
+        <file>resources/models/common-cockle.obj</file>
     </qresource>
 </RCC>
