Textures with Phong.

--- a/resources.qrc
+++ b/resources.qrc
@@ -28,5 +28,7 @@
         <file>resources/models/cruiser.obj</file>
         <file>resources/textures/cruiser.bmp</file>
         <file>resources/textures/F16s.bmp</file>
+        <file>resources/vshaderText.glsl</file>
+        <file>resources/fshaderText.glsl</file>
     </qresource>
 </RCC>
