Añadido shaders para utilizar dos archivos de texturas, uno de ellos con las  normales. De momento estos shaders estan comentados y no se usan, ya que si intentamos utilizarlos con un fichero que no tiene textura normal asociada puede dar resultados extraños. Para usarlos id a GLwidget y comentar los shaders PhongText y poned los de PhongTextNormal.

--- a/resources.qrc
+++ b/resources.qrc
@@ -29,5 +29,7 @@
         <file>resources/textures/F16s.bmp</file>
         <file>resources/vshaderText.glsl</file>
         <file>resources/fshaderText.glsl</file>
+        <file>resources/fshaderPhongTextNormal.glsl</file>
+        <file>resources/vshaderPhongTextNormal.glsl</file>
     </qresource>
 </RCC>
