--- a/resources.qrc
+++ b/resources.qrc
@@ -31,5 +31,8 @@
         <file>resources/fshaderText.glsl</file>
         <file>resources/fshaderPhongTextNormal.glsl</file>
         <file>resources/vshaderPhongTextNormal.glsl</file>
+        <file>resources/models/JUPITER.obj</file>
+        <file>resources/textures/jupiter.png</file>
+        <file>resources/textures/jupiterN.png</file>
     </qresource>
 </RCC>
